--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,7 +3,10 @@ name: Test CI
 on:
   push:
     branches:
-      - '*'
+      - main
+  pull_request:
+    branches:
+      - '**'
 jobs:
   deploy:
     runs-on: ubuntu-22.04
