--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "main": "src/index.ts",
   "scripts": {
     "test": "tsx ./src/tests/index.ts",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "lint": "eslint \"**/*.ts\" --fix",
     "prettier:check": "prettier --check ./**/*.{ts,js,json,*rc}",
     "prettier:write": "prettier --write ./**/*.{ts,js,json,*rc}",
     "precommit": "pnpm lint",
