--- a/.github/workflows/prepush.yml
+++ b/.github/workflows/prepush.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-22.04
     strategy:
       matrix:
-        node: ['18.x', '20.x']
+        node: ['20.x']
     steps:
       - name: Checkout source code
         uses: actions/checkout@v3
@@ -24,7 +24,7 @@ jobs:
         with:
           node-version: ${{ matrix.node }}
       - name: Install dependencies
-        run: pnpm i --frozen-lockfile --ignore-scripts
+        run: pnpm i --frozen-lockfile
       - name: ESLint
         run: pnpm lint
       - name: Prettier write
