--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,10 +11,12 @@
     "strict": true,
     "noImplicitAny": true,
     "useUnknownInCatchVariables": false,
-    "inlineSourceMap": true
+    "inlineSourceMap": true,
+    "declaration": true
   },
   "ts-node": {
     "esm": true
   },
-  "lib": ["esnext"]
+  "lib": ["esnext"],
+  "include": ["**/*.ts"]
 }
