--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ipfs-node",
-  "version": "0.0.4",
+  "version": "0.0.6",
   "description": "This repository allows you to create your own ipfs node when using helia.",
   "author": "https://github.com/0xdino",
   "private": false,
@@ -12,46 +12,44 @@
   "repository": "https://github.com/0xdino/ipfs-node.git",
   "license": "MIT",
   "type": "module",
-  "main": "src/index.ts",
+  "main": "dist/index.js",
   "scripts": {
-    "test": "tsx ./src/tests/index.ts",
+    "test": "tsx ./test/index.ts",
     "lint": "eslint \"**/*.ts\" --fix",
     "prettier:check": "prettier --check ./**/*.{ts,js,json,*rc}",
     "prettier:write": "prettier --write ./**/*.{ts,js,json,*rc}",
     "precommit": "pnpm lint",
     "prepare": "husky install",
-    "prepush": "pnpm test"
+    "prepush": "pnpm test",
+    "build": "tsc"
   },
   "exports": [
-    "./src/index.ts",
-    "./src/helpers/*.{ts}",
-    "./src/services/*.{ts}",
-    "./src/tests/*.{ts}"
+    "./dist/index.js"
   ],
   "files": [
-    "src"
+    "dist"
   ],
   "dependencies": {
     "@chainsafe/libp2p-noise": "^14.1.0",
     "@chainsafe/libp2p-yamux": "^6.0.1",
     "@helia/unixfs": "^1.4.3",
-    "@libp2p/bootstrap": "^10.0.8",
-    "@libp2p/identify": "^1.0.7",
-    "@libp2p/tcp": "^9.0.8",
-    "blockstore-core": "^4.3.8",
-    "datastore-core": "^9.2.6",
+    "@libp2p/bootstrap": "^10.0.9",
+    "@libp2p/identify": "^1.0.8",
+    "@libp2p/tcp": "^9.0.9",
+    "blockstore-core": "^4.3.10",
+    "datastore-core": "^9.2.7",
     "helia": "^2.1.0",
-    "libp2p": "^1.0.12",
+    "libp2p": "^1.1.0",
     "multiformats": "^13.0.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^18.4.3",
     "@commitlint/config-conventional": "^18.4.3",
-    "@typescript-eslint/eslint-plugin": "^6.15.0",
-    "@typescript-eslint/parser": "^6.15.0",
+    "@typescript-eslint/eslint-plugin": "^6.17.0",
+    "@typescript-eslint/parser": "^6.17.0",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.1.1",
+    "eslint-plugin-prettier": "^5.1.2",
     "husky": "^8.0.3",
     "prettier": "^3.1.1",
     "tsx": "^4.7.0",
