--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,10 @@
 {
   "compilerOptions": {
-    "module": "ESNext",
+    "module": "ES2022",
+    "target": "ES2022",
     "esModuleInterop": true,
-    "target": "ESNext",
-    "moduleResolution": "Node",
     "outDir": "dist",
+    "moduleResolution": "Node",
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true,
     "isolatedModules": true,
@@ -12,11 +12,10 @@
     "noImplicitAny": true,
     "useUnknownInCatchVariables": false,
     "inlineSourceMap": true,
-    "declaration": true
+    "declaration": true,
+    "allowJs": true,
+    "skipLibCheck": true
   },
-  "ts-node": {
-    "esm": true
-  },
-  "lib": ["esnext"],
-  "include": ["**/*.ts"]
+  "include": ["**/*.ts", "test/index.ts", "test/index.ta"],
+  "exclude": ["node_modules", "dist", "test"]
 }
