--- a/.github/workflows/prepush.yml
+++ b/.github/workflows/prepush.yml
@@ -27,9 +27,11 @@ jobs:
         run: pnpm i --frozen-lockfile
       - name: ESLint
         run: pnpm lint
-      - name: Prettier write
-        run: pnpm prettier:write
-      - name: Prettier check
-        run: pnpm prettier:check
-      - name: Test
-        run: pnpm test
+      - name: Docker
+        run: docker compose up -d --build
+      - name: Docker containers
+        run: docker ps -a
+      - name: Logs IPFS
+        run: docker logs ipfs
+      - name: Logs test
+        run: docker logs app
