--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,17 @@ services:
     image: ipfs/kubo
     restart: unless-stopped
     container_name: ipfs
+    volumes:
+      - ipfs_path:/data/ipfs
+      - ipfs_fuse:/ipfs
+      - ipns_fuse:/ipns
+    environment:
+      - IPFS_PATH=/data/ipfs
+    ports:
+      - 4001:4001/tcp
+      - 4001:4001/udp
+      - 127.0.0.1:5001:5001
+      - 127.0.0.1:8080:8080
   app:
     build:
       context: .
