--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "prettier:write": "prettier --write ./**/*.{ts,js,json,*rc}",
     "precommit": "pnpm lint",
     "prepare": "husky install",
-    "prepush": "pnpm test",
+    "prepush": "pnpm lint",
     "build": "rimraf ./dist && tsc && pnpm babel",
     "babel": "babel dist --out-dir dist --extensions .js"
   },
