--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,6 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: app
+    container_name: ipfs-node
     depends_on:
       - ipfs
