--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ipfs-node",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "This repository allows you to create your own ipfs node when using helia and kubo-rpc-client.",
   "author": "https://github.com/0xdino",
   "private": false,
@@ -21,7 +21,7 @@
     "prettier:check": "prettier --check ./**/*.{ts,js,json,*rc}",
     "prettier:write": "prettier --write ./**/*.{ts,js,json,*rc}",
     "precommit": "pnpm build",
-    "prepare": "husky install",
+    "prepare": "husky",
     "prepush": "pnpm lint",
     "build": "rimraf ./dist && tsc && pnpm babel && pnpm lint",
     "babel": "babel dist --out-dir dist --extensions .js"
@@ -35,46 +35,46 @@
     "dist"
   ],
   "dependencies": {
-    "@chainsafe/libp2p-gossipsub": "^11.0.1",
+    "@chainsafe/libp2p-gossipsub": "^11.2.1",
     "@chainsafe/libp2p-noise": "^14.1.0",
-    "@chainsafe/libp2p-yamux": "^6.0.1",
-    "@helia/unixfs": "^2.0.0",
-    "@libp2p/autonat": "^1.0.7",
-    "@libp2p/bootstrap": "^10.0.10",
-    "@libp2p/circuit-relay-v2": "^1.0.10",
-    "@libp2p/dcutr": "^1.0.7",
-    "@libp2p/identify": "^1.0.9",
-    "@libp2p/kad-dht": "^12.0.2",
-    "@libp2p/mdns": "^10.0.10",
-    "@libp2p/mplex": "^10.0.10",
-    "@libp2p/ping": "^1.0.8",
-    "@libp2p/tcp": "^9.0.10",
-    "@libp2p/upnp-nat": "^1.0.8",
-    "@libp2p/webrtc": "^4.0.14",
-    "@libp2p/websockets": "^8.0.10",
-    "blockstore-core": "^4.3.10",
-    "datastore-core": "^9.2.7",
-    "helia": "^3.0.0",
-    "ipns": "^8.0.0",
-    "kubo-rpc-client": "^3.0.2",
-    "libp2p": "^1.1.1",
-    "multiformats": "^13.0.1"
+    "@chainsafe/libp2p-yamux": "^6.0.2",
+    "@helia/unixfs": "^2.0.1",
+    "@libp2p/autonat": "^1.0.13",
+    "@libp2p/bootstrap": "^10.0.16",
+    "@libp2p/circuit-relay-v2": "^1.0.16",
+    "@libp2p/dcutr": "^1.0.13",
+    "@libp2p/identify": "^1.0.15",
+    "@libp2p/kad-dht": "^12.0.9",
+    "@libp2p/mdns": "^10.0.16",
+    "@libp2p/mplex": "^10.0.16",
+    "@libp2p/ping": "^1.0.12",
+    "@libp2p/tcp": "^9.0.16",
+    "@libp2p/upnp-nat": "^1.0.14",
+    "@libp2p/webrtc": "^4.0.22",
+    "@libp2p/websockets": "^8.0.16",
+    "blockstore-core": "^4.4.0",
+    "datastore-core": "^9.2.9",
+    "helia": "^3.0.1",
+    "ipns": "^8.0.4",
+    "kubo-rpc-client": "^3.0.4",
+    "libp2p": "^1.3.0",
+    "multiformats": "^13.1.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.23.4",
-    "@commitlint/cli": "^18.4.4",
-    "@commitlint/config-conventional": "^18.4.4",
-    "@types/node": "^20.10.8",
-    "@typescript-eslint/eslint-plugin": "^6.18.1",
-    "@typescript-eslint/parser": "^6.18.1",
+    "@babel/cli": "^7.24.1",
+    "@commitlint/cli": "^19.2.1",
+    "@commitlint/config-conventional": "^19.1.0",
+    "@types/node": "^20.11.30",
+    "@typescript-eslint/eslint-plugin": "^7.4.0",
+    "@typescript-eslint/parser": "^7.4.0",
     "cross-env": "^7.0.3",
-    "eslint": "^8.56.0",
+    "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
-    "husky": "^8.0.3",
-    "prettier": "^3.1.1",
+    "husky": "^9.0.11",
+    "prettier": "^3.2.5",
     "rimraf": "^5.0.5",
-    "tsx": "^4.7.0",
-    "typescript": "^5.3.3"
+    "tsx": "^4.7.1",
+    "typescript": "^5.4.3"
   }
 }
